--- a/mp3-codec/mp3-codec.vcxproj.filters
+++ b/mp3-codec/mp3-codec.vcxproj.filters
@@ -56,6 +56,9 @@
     <ClInclude Include="open.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="mpeg.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -89,6 +92,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="open.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="mpeg.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
