--- a/mp3-codec/mp3-codec.vcxproj
+++ b/mp3-codec/mp3-codec.vcxproj
@@ -175,11 +175,14 @@
   <ItemGroup>
     <EmbeddedResource Include="Code.resx">
       <DependentUpon>Code.h</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.h</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Resources.resx" />
+    <EmbeddedResource Include="Resources.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Resources.uk-UA.resx">
       <SubType>Designer</SubType>
     </EmbeddedResource>
