--- a/mp3-codec/mp3-codec.vcxproj.filters
+++ b/mp3-codec/mp3-codec.vcxproj.filters
@@ -59,6 +59,9 @@
     <ClInclude Include="mpeg.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="paginator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -95,6 +98,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="mpeg.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="paginator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
