--- a/mp3-codec/mp3-codec.vcxproj
+++ b/mp3-codec/mp3-codec.vcxproj
@@ -179,6 +179,7 @@
       <DependentUpon>Code.h</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="CodeResource.resx" />
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.h</DependentUpon>
     </EmbeddedResource>
